--- a/Mineração de Regras.ipynb
+++ b/Mineração de Regras.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:29034ce11d3a71161cd1247cf0b447f71839ede6d1d0fabb4ba2a2c16ae31fec"
+  "signature": "sha256:319725203f3b5fe670625acc57eb7ab6ebf2a3428d7bed4969241520cbe0e125"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,7 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[<img src=\"files/cc.png\" width=100 height=40>](https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode)\n",
+      "[<img src=\"https://licensebuttons.net/l/by-nc-sa/3.0/88x31.png\">](https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode)\n",
       "Autores: Leonardo Ferreira (leauferreira@gmail.com) e Petr\u00f4nio Silva (petronio.candido@gmail.com)\n",
       "\n",
       "\n",
@@ -957,6 +957,7 @@
       "\n",
       "$$\n",
       "x_{t+1} = x_t + cos(\\phi_t+\\theta_t) + sen(\\theta_t)sen(\\phi_t) \\\\\n",
+      "\n",
       "\\phi_{t+1} = \\phi_t - sen^{-1}(\\frac{2sen(\\theta_t)}{b})\n",
       "$$"
      ]
